--- a/if.css
+++ b/if.css
@@ -44,15 +44,6 @@
     src: url('fonts/if-thin-100.woff2') format("woff2"), url('fonts/if-thin-100.ttf') format("truetype");
 }
 
-@font-face {
-    font-family: "Icons Font Brands";
-    font-style: normal;
-    font-weight: 100;
-    font-display: block;
-    src: url('fonts/if-brands-400.woff2') format("woff2"), url('fonts/if-thin-100.ttf') format("truetype");
-}
-
-
 :root {
     --if-font: normal 400 1em/1 "Icons Font";
     --if-font-light: normal 300 1em/1 "Icons Font Light";
@@ -105,7 +96,7 @@
     font-weight: var(--if-style);
 }
 
-.if, .if-brands, .if-classic, .if-duotone, .if-light, .if-regular, .if-sharp, .if-sharp-duotone, .if-sharp-solid, .if-solid, .if-thin, .ifb, .ifd, .ifl, .ifr, .ifs, .ifds, .ift {
+.if, .if-brands, .if-light, .if-regular, .if-solid, .if-thin, .ifb, .ifl, .ifr, .ifs, .ift {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     display: var(--if-display, inline-block);
@@ -125,22 +116,18 @@
     font-family: "Icons Font Regular";
     font-weight: 400;
 }
-
 .if-solid, .ifs {
     font-family: "Icons Font Solid";
     font-weight: 900;
 }
-
 .if-light, .ifl {
     font-family: "Icons Font Light";
     font-weight: 300;
 }
-
 .if-thin, .ift {
     font-family: "Icons Font Thin";
     font-weight: 100;
-}
- 
+} 
 
 /* --- Icon Colors --- */
 .if-color-red { color: red; } 
@@ -287,77 +274,77 @@
 /**Margen**/
 .if-pull-left {
     float: left;
-    margin-right: var(--if-pull-margin,.3em);
+    margin-right: .3em;
 }
 
 .if-pull-right {
     float: right;
-    margin-left: var(--if-pull-margin,.3em);
+    margin-left: .3em;
 }
 
 /**animation*/
 .if-beat {
     animation-name: if-beat;
-    animation-delay: var(--fa-animation-delay,0s);
-    animation-direction: var(--fa-animation-direction,normal);
-    animation-duration: var(--fa-animation-duration,1s);
-    animation-iteration-count: var(--fa-animation-iteration-count,infinite);
-    animation-timing-function: var(--fa-animation-timing,ease-in-out);
+    animation-delay: 0s;
+    animation-direction: normal;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
 }
 
 .if-bounce {
     animation-name: if-bounce;
-    animation-delay: var(--fa-animation-delay,0s);
-    animation-direction: var(--fa-animation-direction,normal);
-    animation-duration: var(--fa-animation-duration,1s);
-    animation-iteration-count: var(--fa-animation-iteration-count,infinite);
-    animation-timing-function: var(--fa-animation-timing,cubic-bezier(.28,.84,.42,1));
+    animation-delay: 0s;
+    animation-direction: normal;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: cubic-bezier(.28,.84,.42,1);
 }
 
 .if-fade {
     animation-name: if-fade;
-    animation-iteration-count: var(--fa-animation-iteration-count,infinite);
-    animation-timing-function: var(--fa-animation-timing,cubic-bezier(.4,0,.6,1));
+    animation-iteration-count: infinite;
+    animation-timing-function: cubic-bezier(.4,0,.6,1);
 }
 
 .if-beat-fade,.if-fade {
-    animation-delay: var(--fa-animation-delay,0s);
-    animation-direction: var(--fa-animation-direction,normal);
-    animation-duration: var(--fa-animation-duration,1s);
+    animation-delay: 0s;
+    animation-direction: normal;
+    animation-duration: 1s;
 }
 
 .if-beat-fade {
     animation-name: if-beat-fade;
-    animation-iteration-count: var(--fa-animation-iteration-count,infinite);
-    animation-timing-function: var(--fa-animation-timing,cubic-bezier(.4,0,.6,1));
+    animation-iteration-count: infinite;
+    animation-timing-function: cubic-bezier(.4,0,.6,1);
 }
 
 .if-flip {
     animation-name: if-flip;
-    animation-delay: var(--fa-animation-delay,0s);
-    animation-direction: var(--fa-animation-direction,normal);
-    animation-duration: var(--fa-animation-duration,1s);
-    animation-iteration-count: var(--fa-animation-iteration-count,infinite);
-    animation-timing-function: var(--fa-animation-timing,ease-in-out);
+    animation-delay: 0s;
+    animation-direction: normal;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
 }
 
 .if-shake {
     animation-name: if-shake;
-    animation-duration: var(--fa-animation-duration,1s);
-    animation-iteration-count: var(--fa-animation-iteration-count,infinite);
-    animation-timing-function: var(--fa-animation-timing,linear);
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 
 .if-shake,.if-spin {
-    animation-delay: var(--fa-animation-delay,0s);
-    animation-direction: var(--fa-animation-direction,normal);
+    animation-delay: 0s;
+    animation-direction: normal;
 }
 
 .if-spin {
     animation-name: if-spin;
-    animation-duration: var(--fa-animation-duration,2s);
-    animation-iteration-count: var(--fa-animation-iteration-count,infinite);
-    animation-timing-function: var(--fa-animation-timing,linear);
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 
 .if-spin-reverse {
@@ -366,10 +353,10 @@
 
 .if-pulse,.if-spin-pulse {
     animation-name: if-spin;
-    animation-direction: var(--fa-animation-direction,normal);
-    animation-duration: var(--fa-animation-duration,1s);
-    animation-iteration-count: var(--fa-animation-iteration-count,infinite);
-    animation-timing-function: var(--fa-animation-timing,steps(8));
+    animation-direction: normal;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: steps(8);
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -388,7 +375,7 @@
     }
 
     45% {
-        transform: scale(var(--fa-beat-scale,1.25));
+        transform: scale(1.25);
     }
 }
 
@@ -398,19 +385,19 @@
     }
 
     10% {
-        transform: scale(var(--fa-bounce-start-scale-x,1.1),var(--fa-bounce-start-scale-y,.9)) translateY(0);
+        transform: scale(1.1,.9) translateY(0);
     }
 
     30% {
-        transform: scale(var(--fa-bounce-jump-scale-x,.9),var(--fa-bounce-jump-scale-y,1.1)) translateY(var(--fa-bounce-height,-.5em));
+        transform: scale(.9,1.1) translateY(-.5em);
     }
 
     50% {
-        transform: scale(var(--fa-bounce-land-scale-x,1.05),var(--fa-bounce-land-scale-y,.95)) translateY(0);
+        transform: scale(1.05,.95) translateY(0);
     }
 
     57% {
-        transform: scale(1) translateY(var(--fa-bounce-rebound,-.125em));
+        transform: scale(1) translateY(-.125em);
     }
 
     64% {
@@ -424,25 +411,25 @@
 
 @keyframes if-fade {
     50% {
-        opacity: var(--fa-fade-opacity,.4);
+        opacity: .4;
     }
 }
 
 @keyframes if-beat-fade {
     0%,to {
-        opacity: var(--fa-beat-fade-opacity,.4);
+        opacity: .4;
         transform: scale(1);
     }
 
     50% {
         opacity: 1;
-        transform: scale(var(--fa-beat-fade-scale,1.125));
+        transform: scale(1.125);
     }
 }
 
 @keyframes if-flip {
     50% {
-        transform: rotate3d(var(--fa-flip-x,0),var(--fa-flip-y,1),var(--fa-flip-z,0),var(--fa-flip-angle,-180deg));
+        transform: rotate3d(0,1,0,-180deg);
     }
 }
 
